android clip children bug fix.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-native-svg": "^6.0.1-rc.1"
+    "react-native-svg": "5.5.1"
   }
 }
